--- a/pages/HimeraSearch.html
+++ b/pages/HimeraSearch.html
@@ -7,3 +7,6 @@ permalink: /HimeraSearch/
 <meta http-equiv="refresh" content="0;URL=http://t.me/Search_HimeraBot" />
 </head>
 
+<article>
+  <header><h1><a href="{{ page.url | relative_url }}">{{ page.title }}</a></h1></header>
+ </article>
