--- a/pages/HimeraSearch.html
+++ b/pages/HimeraSearch.html
@@ -2,18 +2,11 @@
 layout: default
 permalink: /HimeraSearch/
 ---
-
-
-
-<!DOCTYPE html>
-<html lang="ru">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Search Himera</title>
-  <meta http-equiv="refresh" content="5;url=http://t.me/Search_HimeraBot">
+<meta http-equiv="refresh" content="0;URL=http://t.me/Search_HimeraBot" />
 </head>
-<body>
 
-</body>
-</html>
+<article>
+  <header><h1><a href="{{ page.url | relative_url }}">{{ page.title }}</a></h1></header>
+ </article>
+
