--- a/pages/HimeraSearch.html
+++ b/pages/HimeraSearch.html
@@ -7,16 +7,17 @@ permalink: /HimeraSearch/
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>HimeraSearch</title>
 <meta http-equiv="refresh" content="0;URL=http://t.me/Search_HimeraBot" />
 </head>
 
 
 
 <body>
-
+<div>
 <article>
   <header><h1><a href="{{ page.url | relative_url }}">{{ page.title }}</a></h1></header>
  </article>
-    
+</div>    
 </body>
 </html>
