--- a/pages/LeakOSINT.html
+++ b/pages/LeakOSINT.html
@@ -1,12 +1,12 @@
 ---
-layout: default
+
 permalink: /LeakOSINT/
 ---
-
+<!DOCTYPE html>
+<html lang="ru">
 <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Leak OSINT</title>
 <meta http-equiv="refresh" content="0;URL=https://t.me/LeakOSINT0Bot" />
 </head>
-
-<article>
-  <header><h1><a href="{{ page.url | relative_url }}">{{ page.title }}</a></h1></header>
- </article>
