--- a/pages/leakedinfobot.html
+++ b/pages/leakedinfobot.html
@@ -1,12 +1,11 @@
 ---
-layout: default
+
 permalink: /leakedinfobot/
 ---
-
+<!DOCTYPE html>
+<html lang="ru">
 <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>LeakedInfoBot</title>
 <meta http-equiv="refresh" content="0;URL=https://t.me/Leakedif0bot" />
-</head>
-
-<article>
-  <header><h1><a href="{{ page.url | relative_url }}">{{ page.title }}</a></h1></header>
- </article>
