--- a/pages/quick-osint.html
+++ b/pages/quick-osint.html
@@ -2,11 +2,10 @@
 layout: default
 permalink: /quick-osint/
 ---
-
+<!DOCTYPE html>
+<html lang="ru">
 <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>QuickOSINT</title>
 <meta http-equiv="refresh" content="0;URL=https://t.me/QuickOSINToBot" />
-</head>
-
-<article>
-  <header><h1><a href="{{ page.url | relative_url }}">{{ page.title }}</a></h1></header>
- </article>
