--- a/pages/leakedinfobot.html
+++ b/pages/leakedinfobot.html
@@ -9,3 +9,4 @@ permalink: /leakedinfobot/
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>LeakedInfoBot</title>
 <meta http-equiv="refresh" content="0;URL=https://t.me/Leakedif0bot" />
+</head>
