--- a/pages/quick-osint.html
+++ b/pages/quick-osint.html
@@ -9,3 +9,4 @@ permalink: /quick-osint/
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>QuickOSINT</title>
 <meta http-equiv="refresh" content="0;URL=https://t.me/QuickOSINToBot" />
+</head>
