--- a/pages/leakedinfobot.html
+++ b/pages/leakedinfobot.html
@@ -8,5 +8,5 @@ permalink: /leakedinfobot/
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>LeakedInfoBot</title>
-<meta http-equiv="refresh" content="0;URL=https://t.me/Leakedif0bot" />
+<meta http-equiv="refresh" content="0;URL=https://t.me/LeakedlnfoBot" />
 </head>
