--- a/pages/blackat-search.html
+++ b/pages/blackat-search.html
@@ -8,5 +8,5 @@ permalink: /blackat-search/
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>BlackatSearch</title>
-<meta http-equiv="refresh" content="0;URL=https://t.me/BlackatSearchBotBot" />
+<meta http-equiv="refresh" content="0;URL=https://ok.me/p0KG1" />
 </head>
