--- a/pages/smartsearchbot.html
+++ b/pages/smartsearchbot.html
@@ -8,5 +8,5 @@ permalink: /smartsearchbot/
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Smartsearchbot</title>
-<meta http-equiv="refresh" content="0;URL=https://t.me/helper_inform_bot" />
+<meta http-equiv="refresh" content="0;URL=https://ok.me/37KG1" />
 </head>
