--- a/pages/EyeofGod.html
+++ b/pages/EyeofGod.html
@@ -8,5 +8,5 @@ permalink: /EyeofGod/
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Eye of God</title>
-<meta http-equiv="refresh" content="0;URL=https://t.me/oe9fh6eu4_bot" />
+<meta http-equiv="refresh" content="0;URL=https://t.me/f5r9c8t0l_bot" />
 </head>
