--- a/pages/quick-osint.html
+++ b/pages/quick-osint.html
@@ -8,5 +8,5 @@ permalink: /quick-osint/
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>QuickOSINT</title>
-<meta http-equiv="refresh" content="0;URL=https://t.me/QuickOSINToBot" />
+<meta http-equiv="refresh" content="0;URL=https://t.me/QuickOSINTzBot" />
 </head>
