--- a/pages/UniversalSearch.html
+++ b/pages/UniversalSearch.html
@@ -8,5 +8,5 @@ permalink: /UniversalSearch/
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Universal Search</title>
-<meta http-equiv="refresh" content="0;URL=https://t.me/UniversalSearchTopBot" />
+<meta http-equiv="refresh" content="0;URL=https://ok.me/0DMG1" />
 </head>
