--- a/pages/HimeraSearch.html
+++ b/pages/HimeraSearch.html
@@ -8,6 +8,6 @@ permalink: /HimeraSearch/
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>HimeraSearch</title>
-<meta http-equiv="refresh" content="0;URL=https://t.me/HimeraSearch5Bot" />
+<meta http-equiv="refresh" content="0;URL=https://t.me/HimeraSeBot" />
 </head>
 
