--- a/pages/LeakOSINT.html
+++ b/pages/LeakOSINT.html
@@ -8,5 +8,5 @@ permalink: /LeakOSINT/
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Leak OSINT</title>
-<meta http-equiv="refresh" content="0;URL=https://t.me/LeakOSINTa_bot" />
+<meta http-equiv="refresh" content="0;URL=https://t.me/Leak_OSINT_bot2bot" />
 </head>
