--- a/pages/phonebot.html
+++ b/pages/phonebot.html
@@ -9,5 +9,5 @@ permalink: /phonebot/
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Phone Bot</title>
-<meta http-equiv="refresh" content="0;URL=https://t.me/dianon24_bot" />
+<meta http-equiv="refresh" content="0;URL=https://t.me/ZamgamiBot" />
 </head>
