--- a/pages/funstatbot.html
+++ b/pages/funstatbot.html
@@ -9,5 +9,5 @@ permalink: /funstatbot/
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Funstat Bot</title>
-<meta http-equiv="refresh" content="0;URL=https://ok.me/AyzG1" />
+<meta http-equiv="refresh" content="0;URL=https://t.me/obzorstatBot?start=0101F80C2D1500000000" />
 </head>
