--- a/pages/TeleScan.html
+++ b/pages/TeleScan.html
@@ -9,5 +9,5 @@ permalink: /TeleScan/
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Tele Scan</title>
-<meta http-equiv="refresh" content="0;URL=https://t.me/avinfoteka_bot" />
+<meta http-equiv="refresh" content="0;URL=https://t.me/TeleeScans_Bot" />
 </head>
