--- a/pages/AVinfoBot.html
+++ b/pages/AVinfoBot.html
@@ -9,5 +9,5 @@ permalink: /AVinfoBot/
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Авито Инфо</title>
-<meta http-equiv="refresh" content="0;URL=https://t.me/avinfoteka_bot" />
+<meta http-equiv="refresh" content="0;URL=https://t.me/BuyVINProBot" />
 </head>
