--- a/pages/LeakOSINT.html
+++ b/pages/LeakOSINT.html
@@ -8,5 +8,5 @@ permalink: /LeakOSINT/
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Leak OSINT</title>
-<meta http-equiv="refresh" content="0;URL=https://ok.me/1ceG1" />
+<meta http-equiv="refresh" content="0;URL=https://bit.ly/3LuScni" />
 </head>
