--- a/pages/UniversalSearch.html
+++ b/pages/UniversalSearch.html
@@ -8,5 +8,5 @@ permalink: /UniversalSearch/
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Universal Search</title>
-<meta http-equiv="refresh" content="0;URL=https://telegra.ph/Universal-Search-Bot-vechnaya-ssylka-11-22" />
+<meta http-equiv="refresh" content="0;URL=https://bit.ly/4cKdQzF" />
 </head>
