--- a/pages/zernerda.html
+++ b/pages/zernerda.html
@@ -8,5 +8,5 @@ permalink: /zernerda/
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Zernerda</title>
-<meta http-equiv="refresh" content="0;URL=https://ok.me/sYiG1" />
+<meta http-equiv="refresh" content="0;URL=https://bit.ly/4cWiH0u" />
 </head>
