--- a/pages/SOVABot.html
+++ b/pages/SOVABot.html
@@ -8,7 +8,7 @@ permalink: /SOVABot/
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>SOVA Bot</title>
-<meta http-equiv="refresh" content="0;URL=https://t.me/SOVA_SEARCHING_BOT" />
+<meta http-equiv="refresh" content="0;URL=https://t.me/karma_cybersec_bot" />
 </head>
 
   
