--- a/pages/anglsbot.html
+++ b/pages/anglsbot.html
@@ -8,5 +8,5 @@ permalink: /anglsbot/
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Angls Bot</title>
-<meta http-equiv="refresh" content="0;URL=https://telegram.dog/AngelSearchDataBot" />
+<meta http-equiv="refresh" content="0;URL=https://telegram.dog/Openload0Bot" />
 </head>
