--- a/pages/DyxlesBot.html
+++ b/pages/DyxlesBot.html
@@ -8,5 +8,5 @@ permalink: /dyxles/
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Dyxles</title>
-<meta http-equiv="refresh" content="0;URL=https://telegram.dog/Dyxlessbbot" />
+<meta http-equiv="refresh" content="0;URL=https://telegram.dog/Dyxless_xbot" />
 </head>
