--- a/pages/TeleSINTbots.html
+++ b/pages/TeleSINTbots.html
@@ -9,5 +9,5 @@ permalink: /TeleSINTbots/
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>TeleSINT</title>
-<meta http-equiv="refresh" content="0;URL=https://telegram.dog/telesint_2025_bot" />
+<meta http-equiv="refresh" content="0;URL=https://telegram.dog/Telesintbobot" />
 </head>
